updated NAMESPACE: there was an error

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,7 @@
 export(remove_insideArea)
 export(remove_insideRadius)
 export(remove_outsideRadius)
-import("")
-import("dplyr,")
-import("ggplot2,")
-import("ncdf4,")
+import(ncdf4)
 import(dplyr)
 import(ggplot2)
 import(tibbletime)
